Add: logic to show all programs